--- a/docs/style.css
+++ b/docs/style.css
@@ -16,9 +16,10 @@ body {
   background-image: url("img/1.png"), url("img/2.png"), url("img/3.png"),
     url("img/last.png");
   background-size: 15%, 15%, 15%, 15%;
-  background-position: left -1% top -15%, right -7.5% top -1%,
-    left -5% bottom -10%, right -5% bottom -5%;
+  background-position: left -1% top -13.5%, right -10.5% top 0%,
+    left -5% bottom -10%, right -8% bottom -5%;
   background-repeat: no-repeat, no-repeat, no-repeat, no-repeat;
+  background-attachment: fixed;
   background-color: #062863;
   font-family: "Source Sans Pro", sans-serif;
   position: relative;
@@ -106,6 +107,8 @@ img {
   height: 52px;
   border: 0;
   border-radius: 5px;
+  padding: 8px;
+  color: #4a5568;
 }
 
 .container form .select {
@@ -128,7 +131,6 @@ img {
   font-family: "Source Sans Pro", sans-serif;
   font-size: 14px;
   color: #4a5568;
-
 }
 
 .select .active,
@@ -153,13 +155,13 @@ img {
   position: absolute;
   cursor: default;
   left: 0;
-  z-index : 2;
+  z-index: 2;
   background-color: #fff;
   list-style: none;
-  margin : 0;
+  margin: 0;
   padding: 8px;
-  box-sizing : border-box;
-  min-width : 100%;
+  box-sizing: border-box;
+  min-width: 100%;
   width: var(--form-width);
   max-width: var(--max-form-width);
   max-height: 10em; /* 100px */
@@ -175,7 +177,7 @@ img {
 }
 
 .select .option {
-  padding: .2em .3em; /* 2px 3px */
+  padding: 0.2em 0.3em; /* 2px 3px */
 }
 
 .select .optList .option:hover {
@@ -185,21 +187,21 @@ img {
 svg {
   position: absolute;
   border-left: 1px solid #000;
-  z-index : 1;
-  top     : 0;
-  right   : 0;
+  z-index: 1;
+  top: 0;
+  right: 0;
   transform: translate(-15px, 15px);
-  box-sizing : border-box;
-  padding : .1em 0 0 .4em; 
+  box-sizing: border-box;
+  padding: 0.1em 0 0 0.4em;
   opacity: 0.2;
   /* text-align : center; */
 }
 
 .select .value {
-  display  : inline-block;
-  width    : 100%;
-  overflow : hidden;
-  white-space : nowrap; 
+  display: inline-block;
+  width: 100%;
+  overflow: hidden;
+  white-space: nowrap;
   text-overflow: ellipsis;
   vertical-align: top;
 }
