--- a/docs/style.css
+++ b/docs/style.css
@@ -49,7 +49,7 @@ img {
   color: #4a5568;
   display: flex;
   flex-direction: column;
-  border-radius: 20px;
+  border-radius: 20px 20px 20px 0;
   place-items: center;
   padding: 32px 32px 40px;
   max-width: 450px;
@@ -93,12 +93,19 @@ img {
   background-color: #edf2f7;
   padding: 12px 8px 12px 12px;
   margin-bottom: 32px;
+  font-size: 14px;
+  font-weight: 400;
+  color: #1a202c;
   box-shadow: none;
   border: 0;
   border-radius: 5px;
   width: inherit;
   max-width: calc(380px);
   height: 48px;
+}
+
+.container form input:focus {
+  outline: 0;
 }
 
 .container form select {
@@ -111,7 +118,7 @@ img {
   color: #4a5568;
 }
 
-.container form .select {
+/* .container form .select {
   position: relative;
   display: inline-block;
   background-color: #edf2f7;
@@ -124,24 +131,24 @@ img {
   height: 52px;
   border: 0;
   border-radius: 5px;
-}
+} */
 
-.select .value {
+/* .select .value {
   padding: 8px;
   font-family: "Source Sans Pro", sans-serif;
   font-size: 14px;
   color: #4a5568;
-}
+} */
 
-.select .active,
+/* .select .active,
 .select:focus {
   outline: none;
-}
+} */
 
-.select .optList.hidden {
+/* .select .optList.hidden {
   max-height: 0;
   visibility: hidden;
-}
+} */
 
 /* .select li {
   list-style-type: none;
@@ -151,7 +158,7 @@ img {
   padding: 8px 0;
 }  */
 
-.select .optList {
+/* .select .optList {
   position: absolute;
   cursor: default;
   left: 0;
@@ -164,27 +171,27 @@ img {
   min-width: 100%;
   width: var(--form-width);
   max-width: var(--max-form-width);
-  max-height: 10em; /* 100px */
+  max-height: 10em; 
   overflow-y: auto;
   overflow-x: hidden;
   line-height: 36px;
-  /* border: .2em solid #000;  */
-  /* border-top-width : .1em; 
-  border-radius: 0 0 .4em .4em; */
+  border: .2em solid #000; 
+  border-top-width : .1em; 
+  border-radius: 0 0 .4em .4em;
 
-  /* box-shadow: 0 .2em .4em rgba(0,0,0,.4);  */
-  /* background: #f0f0f0; */
-}
+  box-shadow: 0 .2em .4em rgba(0,0,0,.4); 
+  background: #f0f0f0;
+} */
 
-.select .option {
-  padding: 0.2em 0.3em; /* 2px 3px */
+/* .select .option {
+  padding: 0.2em 0.3em; 2px 3px
 }
 
 .select .optList .option:hover {
   background: #93b0e2;
-}
+} */
 
-svg {
+/* svg {
   position: absolute;
   border-left: 1px solid #000;
   z-index: 1;
@@ -194,31 +201,36 @@ svg {
   box-sizing: border-box;
   padding: 0.1em 0 0 0.4em;
   opacity: 0.2;
-  /* text-align : center; */
-}
+  text-align : center;
+} */
 
-.select .value {
+/* .select .value {
   display: inline-block;
   width: 100%;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
   vertical-align: top;
-}
+} */
 
 .container form button {
   width: inherit;
   max-width: calc(380px);
-  background-color: rgb(8, 62, 158);
+  background-color: #083e9e;
   color: #fff;
   padding: 20px 40px 16px;
-  border-radius: 1.25rem 1.25rem 1.25rem 0;
+  border-radius: 10px 10px 10px 0;
   border: 0;
   height: 57px;
   text-transform: uppercase;
   font-size: 14px;
   font-weight: 700;
   line-height: 21px;
+}
+
+.container form button:hover {
+  background-color: #062b6f;
+  cursor: pointer;
 }
 
 body a:last-of-type {
@@ -230,7 +242,7 @@ body a:last-of-type {
 }
 
 body a:last-of-type:hover {
-  text-decoration: underline;
+  color: #b3b3b3;
 }
 
 @media (max-width: 360px) {
